--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - ./healthchecks:/healthchecks
     healthcheck:
-      test: /healthchecks/postgres-healthcheck
+      test: /healthchecks/postgres.sh
       interval: "5s"
   sut:
     image: "${TESTING_IMAGE}"
